--- a/static/credits.html
+++ b/static/credits.html
@@ -36,7 +36,7 @@
         <a href="/gms/"><button class="button-6">Games</button></a>
         <a href="/apps/"><button class="button-6">Apps</button></a>
         <a href="/app"><button class="button-6">Home</button></a>
-        <p><img src="/assets/img/doge.jpg" style="width:22px;height:22px;"> Doge Unblocker</p>
+        <p><img src="/assets/img/doge.jpg" style="width:22px;height:22px;"> SJC Unblocker</p>
 
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
