--- a/static/mobile.html
+++ b/static/mobile.html
@@ -63,7 +63,7 @@
   </style>
   <center>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <h1 style="font-family:mosk;margin:15px;color:white;">Doge Unblocker (Mobile)</h1>
+    <h1 style="font-family:mosk;margin:15px;color:white;">SJC Unblocker (Mobile)</h1>
     <button onclick="myFunction()" class="button-6" style="margin:15px;">Click here to browse.</button>
   </center>
   <script>
