--- a/static/404.html
+++ b/static/404.html
@@ -11,7 +11,7 @@
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="/assets/js/rightclick.js"></script>
   <script src="/assets/js/cloakcheck.js"></script>
-  <title>404 | Doge</title>
+  <title>404 | SJC</title>
 </head>
 
 <body class="bg">
@@ -35,7 +35,7 @@
     <a href="/games/"><button class="button-6">Games</button></a>
     <a href="/apps/"><button class="button-6">Apps</button></a>
     <a href="/"><button class="button-6">Home</button></a>
-    <p><img src="/assets/img/doge.jpg" style="width:22px;height:22px;"> Doge Unblocker</p>
+    <p><img src="/assets/img/doge.jpg" style="width:22px;height:22px;"> SJC Unblocker</p>
 
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
