--- a/static/app.html
+++ b/static/app.html
@@ -3,11 +3,11 @@
 <head>
   <link rel="icon" href="/assets/img/doge.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="Doge Unblocker" />
+  <meta name="title" content="SJC Unblocker" />
   <meta name="description"
-    content="Doge Unblocker is a lighting-fast proxy service built for school. Our services are fast, reliable, and completely free." />
+    content="SJC Unblocker is a lighting-fast proxy service built for school. Our services are fast, reliable, and completely free." />
   <meta name="keywords"
-    content="unblocker, doge unblocker, bypasser, school, hacks, proxy, ultraviolet, discord unblocked, nodejs, github, render, heroku" />
+    content="unblocker, SJC unblocker, bypasser, school, hacks, nodejs" />
   <link rel="stylesheet" href="/assets/css/app.css">
   <link rel="stylesheet" href="/assets/css/rightclick.css">
   <link href="https://unpkg.com/movement.css/movement.css" rel="stylesheet">
@@ -15,20 +15,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js" integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script>
-    var pagetitle = "Home | Doge";
-    var newTitle = "Home | Doge";
+    var pagetitle = "Home | SJC";
+    var newTitle = "Home | SJC";
     
     const storedTitle = localStorage.getItem('tabTitle');  
-if (storedTitle === "Home | Doge") {
+if (storedTitle === "Home | SJC") {
   localStorage.setItem('tabTitle', newTitle);
-} else if (storedTitle === "Gms | Doge") {
+} else if (storedTitle === "Gms | SJC") {
   localStorage.setItem('tabTitle', newTitle);
-  document.title = "Gms | Doge";
-} else if (storedTitle === "Apps | Doge") {
+  document.title = "Gms | SJC";
+} else if (storedTitle === "Apps | SJC") {
   localStorage.setItem('tabTitle', newTitle);
-} else if (storedTitle === "Loader | Doge") {
+} else if (storedTitle === "Loader | SJC") {
   localStorage.setItem('tabTitle', newTitle);
-} else if (storedTitle === "404 | Doge") {
+} else if (storedTitle === "404 | SJC") {
   localStorage.setItem('tabTitle', newTitle);
 }
 else {
@@ -71,7 +71,7 @@ if (isLoggedIn === 'correct') {
   console.log("Login is not enabled.");
 }
   </script>
-  <title>Home | Doge</title>
+  <title>Home | SJC</title>
 </head>
 
 <body class="bg">
@@ -96,7 +96,7 @@ if (isLoggedIn === 'correct') {
     <a href="/gms/"><button class="button-6">Games</button></a>
     <a href="/apps/"><button class="button-6" class="fa-solid fa-user">Apps</button></a>
     <a href="/app"><button class="button-6">Home</button></a>
-    <p style="font-size:25px;"><img src="/assets/img/doge.jpg" style="width:22px;height:22px;"> Doge Unblocker</p>
+    <p style="font-size:25px;"><img src="/assets/img/doge.jpg" style="width:22px;height:22px;"> SJC Unblocker</p>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
